--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#849974</color>
+    <color name="colorPrimaryDark">#505e4f</color>
+    <color name="colorAccent">#36384c</color>
+    <color name="colorAccentBright">#613a43</color>
+    <color name="colorAccentPastel">#e3bab3</color>
+    <color name="colorAccentWhite">#e9dccd</color>
+
 </resources>
