--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.android.betterbuild.MainActivity">
 
-
-    <TextView
+    <!--<TextView
         android:id="@+id/username_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,7 +14,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp" />-->
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
