--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorAccentBright">#613a43</color>
     <color name="colorAccentPastel">#e3bab3</color>
     <color name="colorAccentWhite">#e9dccd</color>
+    <color name="colorWhite">#ffffff</color>
 
 </resources>
