--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -10,6 +10,7 @@
         android:background="@color/colorPrimary"
         android:textColor="@color/colorWhite"
         android:text="Edit Workouts"
+        android:onClick="onClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
